src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__assignment_2d.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error: Array __main_arr has a size of 10, but 11 elements were provided
  ┌─ snapshot:4:43
  │
4 │         arr       : ARRAY[1..2, 1..5] OF DINT := [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
  │                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array __main_arr has a size of 10, but 11 elements were provided

error: Array assignments must be surrounded with `[]`
  ┌─ snapshot:5:47
  │
5 │         arr_alt     : ARRAY[1..2, 1..5] OF DINT := (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11);
  │                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array __main_arr_nested has a size of 10, but 15 elements were provided
  ┌─ snapshot:7:57
  │
7 │         arr_nested    : ARRAY[1..2] OF ARRAY[1..5] OF DINT := [ [1, 2, 3, 4, 5], [6, 7, 8, 9, 10], [11, 12, 13, 14, 15] ];
  │                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array __main_arr_nested has a size of 10, but 15 elements were provided

error: Array assignments must be surrounded with `[]`
  ┌─ snapshot:8:62
  │
8 │         arr_nested_alt  : ARRAY[1..2] OF ARRAY[1..5] OF DINT := ( [1, 2, 3, 4, 5], [6, 7, 8, 9, 10], [11, 12, 13, 14, 15] );
  │                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ snapshot:14:12
   │
14 │       arr := (1, 2, 3, 4, 5, 6, 7, 8, 9);
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ snapshot:15:12
   │
15 │       arr := (1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array assignments must be surrounded with `[]`
   ┌─ snapshot:16:12
   │
16 │       arr := (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11);
   │               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error: Array __main_arr has a size of 10, but 11 elements were provided
   ┌─ snapshot:17:11
   │
17 │       arr := [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11];
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array __main_arr has a size of 10, but 11 elements were provided

error: Array __main_arr_nested has a size of 10, but 15 elements were provided
   ┌─ snapshot:20:19
   │
20 │       arr_nested    := [ [1, 2, 3, 4, 5], [6, 7, 8, 9, 10], [11, 12, 13, 14, 15] ];
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array __main_arr_nested has a size of 10, but 15 elements were provided

error: Array assignments must be surrounded with `[]`
   ┌─ snapshot:21:21
   │
21 │       arr_nested    := ( [1, 2, 3, 4, 5], [6, 7, 8, 9, 10], [11, 12, 13, 14, 15] );
   │                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`


